--- a/public/admin-side/css/styles.css
+++ b/public/admin-side/css/styles.css
@@ -4,6 +4,20 @@
     box-sizing: border-box;
 }
 
+ .reservations-table thead th {
+            position: sticky;
+            top: 0;
+            background: #fff;
+            z-index: 2;
+        }
+
+
+        .table-scroll {
+            max-height: 500px; 
+            overflow-y: auto;
+}
+
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f8f9fa;
