--- a/public/client/select.room.css
+++ b/public/client/select.room.css
@@ -1,9 +1,10 @@
 
 #roomsContainer {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  display: flex;
+  flex-direction: column;
   gap: 25px;
-  margin-top: 20px;
+  margin: 20px;
+  padding: 20px;
 }
 
 .room-card {
@@ -25,7 +26,7 @@
   width: 100%;
   height: 180px;
   object-fit: cover;
-  display: block;
+
 }
 
 .room-info {
